# test_package

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yaml  release.yaml
example/: docker-compose.yaml  dummy.py
src/theTrial/: __init__.py  __main__.py  app.py  cli.py  constants.py  exceptions.py  log.py
src/theTrial/kafka/: __init__.py  consumer.py  producer.py
src/theTrial/utils/: __init__.py  cli_utils.py  decorated_function_utils.py  file_utils.py  kafka_message_handlers.py
tests/: test_addition.py  test_cli.py
tests/utils/: conftest.py  test_cli_utils.py  test_decorated_function_utils.py  test_kafka_message_handlers.py
