[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.bumpversion]
current_version = "0.1.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = [ "{major}.{minor}.{patch}" ]
tag = true
allow_dirty = true
commit = true
message = "chore:  Bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "src/theTrial/__init__.py"
search = "{current_version}"

[tool.bandit.assert_used]
skips = [ '*_test.py', '*/test_*.py' ]
